--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,9 @@
 
 	"permissions": [
 		"bookmarks",
-        "tabs"
+        "storage",
+        "tabs",
+        "http://*/"
 	],
 
 	"browser_action": {
